--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -5,7 +5,7 @@
 
   <span padding>
   <img src="assets/icon.png" height="35" width="35" />
-  <ion-title>AngularPwaSeed</ion-title>
+  <ion-title>KoiosAnalytics</ion-title>
   </span>
 
   <!--<button mobile-hidden ion-button>
