--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,13 +1,7 @@
-<seed-layout type="menu">
-
-  <!-- Link to routes -->
+<koios-layout type="menu">
   <div menu-items>
-    <seed-menu-item link="['/dashboard']" title="Dashboard" icon="analytics"></seed-menu-item>
-    <seed-menu-item link="['/protected']" title="Protected"></seed-menu-item>
+    <koios-menu-item link="['/dashboard']" title="Dashboard" icon="analytics"></koios-menu-item>
+    <koios-menu-item link="['/protected']" title="Protected"></koios-menu-item>
   </div>
-
-
   <router-outlet></router-outlet>
-
-
-</seed-layout>
+</koios-layout>
