--- a/src/app/layout/header/systeminfo/systeminfo.component.html
+++ b/src/app/layout/header/systeminfo/systeminfo.component.html
@@ -1,4 +1,4 @@
 <div #systemInfo>
   <img src="assets/icon.png" height="100" width="100" />
-  <div><label>Angular PWA Seed</label></div>
+  <div><label>Angular PWA koios</label></div>
 </div>
