--- a/src/theme/theme.scss
+++ b/src/theme/theme.scss
@@ -1,5 +1,5 @@
-$text-color:        #000;
-$background-color:  #eaeaea;
+$text-color:        #FFF;
+$background-color:  #1a1c1d;
 
-$theme-color: #0f3a54;
+$theme-color: #1a1c1d;
 $secondary-color : lighten( desaturate( $theme-color, 40% ) , 65% );
