--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,34 +1,40 @@
 <ion-navbar>
   <button *ngIf="showLeftMenuButton" ion-button icon-only (click)="toggleMenu()" menuToggle="leftMenu">
       <ion-icon name="menu"></ion-icon>
-    </button>
-
+  </button>
   <span padding>
-  <img src="assets/icon.png" height="35" width="35" />
-  <ion-title>KoiosAnalytics</ion-title>
+    <img src="assets/icon.png" height="35" width="35" />
+    <ion-title>KoiosAnalytics</ion-title>
   </span>
 
-  <!--<button mobile-hidden ion-button>
-        <ion-icon name="search"></ion-icon>
-        Search
-    </button>-->
+  <!--<ion-segment class="segment segment-ios ng-untouched ng-valid ng-dirty">-->
+    <!--<ion-segment-button class="segment-button" role="button" tappable="" value="paid" aria-pressed="false" style="transition: none;">-->
+      <!--Paid-->
+      <!--<div class="button-effect"></div>-->
+    <!--</ion-segment-button>-->
+    <!--<ion-segment-button class="segment-button" role="button" tappable="" value="free" aria-pressed="false">-->
+      <!--Free-->
+      <!--<div class="button-effect"></div>-->
+    <!--</ion-segment-button>-->
+    <!--<ion-segment-button class="segment-button segment-activated" role="button" tappable="" value="top" aria-pressed="true">-->
+      <!--Top-->
+      <!--<div class="button-effect"></div>-->
+    <!--</ion-segment-button>-->
+  <!--</ion-segment>-->
 
-    <ng-content></ng-content>
+  <button mobile-hidden ion-button>
+      <ion-icon name="search"></ion-icon>
+      Search
+  </button>
+  <!--<koios-menu-item link="['/about']" title="About" icon="analytics"></koios-menu-item>-->
+  <!--<koios-menu-item link="['/dashboard']" title="Dashboard" icon="analytics"></koios-menu-item>-->
 
+  <ng-content></ng-content>
   <ion-buttons end>
-
-
-    <!--<seed-userinfo summary="true" [hidden]="canShowUserComponentInHeader"></seed-userinfo>-->
-    <!--<button invisible-to="mobile" [hidden]="canShowUserComponentInHeader" ion-button (click)="presentPopover($event)">
-        <ion-icon name="person"></ion-icon>
-        {{name}}
-      </button>-->
-
-
-    <button *ngIf="showRightMenuButton" ion-button icon-only (click)="toggleRightMenu()" menuToggle="rightMenu">
-        <ion-icon name="more"></ion-icon>
-      </button>
-
+    <koios-userinfo summary="true" [hidden]="canShowUserComponentInHeader"></koios-userinfo>
+    <button invisible-to="mobile" [hidden]="canShowUserComponentInHeader" ion-button (click)="presentPopover($event)">
+      <ion-icon name="person"></ion-icon>
+      {{name}}
+    </button>
   </ion-buttons>
-
 </ion-navbar>
