--- a/src/app/layout/header/userinfo/userinfo.component.scss
+++ b/src/app/layout/header/userinfo/userinfo.component.scss
@@ -1,6 +1,9 @@
-ion-icon { 
-    font-size: 100px; 
-    color : white; 
+.user-info {
+  display: inline-block;
+}
+ion-icon {
+    font-size: 100px;
+    color : white;
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
