--- a/src/app/layout/menu/menu.component.html
+++ b/src/app/layout/menu/menu.component.html
@@ -1,81 +1,46 @@
 <ion-split-pane #splitPaneLeftMenu [when]="whenSplitPaneShow(768)">
   <ion-menu id="leftMenu" side="left" type="overlay" [content]="content">
-
     <ion-header>
       <ion-toolbar>
         <ion-title>Pages</ion-title>
-        <span>
-          <a class="right" invisible-to="mobile" (click)="fixMenu()">
-            <span [@leftMenuState]="leftMenuState" class="glyphicon glyphicon-pushpin toolbar-title-md" aria-hidden="true"></span>
-        </a>
-        </span>
+        <!--<span>-->
+          <!--<a class="right" invisible-to="mobile" (click)="fixMenu()">-->
+            <!--<span [@leftMenuState]="leftMenuState" class="glyphicon glyphicon-pushpin toolbar-title-md" aria-hidden="true"></span>-->
+        <!--</a>-->
+        <!--</span>-->
       </ion-toolbar>
     </ion-header>
-
     <ion-content>
       <ion-list>
-        <ng-content select="[seed-menu-items]"></ng-content>
+        <ng-content select="[koios-menu-items]"></ng-content>
+      </ion-list>
+      <ion-list>
+        <!--<ion-item>-->
+          <!--<koios-userinfo></koios-userinfo>-->
+        <!--</ion-item>-->
+        <ion-item>
+          <koios-systeminfo></koios-systeminfo>
+        </ion-item>
+        <ion-item>
+          <koios-enterpriseinfo></koios-enterpriseinfo>
+        </ion-item>
       </ion-list>
     </ion-content>
-
   </ion-menu>
-
-
-
   <ion-split-pane [when]="whenRightSplitPaneShow(768)">
     <!-- when="(min-width: 1440px)" -->
     <ion-content main #content>
-
-      <seed-header>
-      </seed-header>
-
+      <koios-header>
+      </koios-header>
       <div id="appcontent">
-
         <!-- Breadcrumb -->
+        -----
         <breadcrumbs></breadcrumbs>
-
+        -----
         <div padding>
-
-
-
-          <ng-content>
-          </ng-content>
-
+          <ng-content></ng-content>
         </div>
       </div>
-
     </ion-content>
-
-    <ion-menu id="rightMenu" type="overlay" side="right" [content]="content">
-
-      <ion-header>
-        <ion-toolbar>
-          <span>
-            <a class="left" invisible-to="mobile" (click)="fixRightMenu()">
-              <span [@rightMenuState]="rightMenuState" class="glyphicon glyphicon-pushpin toolbar-title-md" aria-hidden="true"></span>
-          </a>
-          </span>
-
-          <ion-title>Info/Settings</ion-title>
-
-        </ion-toolbar>
-      </ion-header>
-
-      <ion-content>
-        <ion-list>
-          <ion-item>
-            <seed-userinfo></seed-userinfo>
-          </ion-item>
-          <ion-item>
-            <seed-systeminfo></seed-systeminfo>
-          </ion-item>
-          <ion-item>
-            <seed-enterpriseinfo></seed-enterpriseinfo>
-          </ion-item>
-        </ion-list>
-      </ion-content>
-
-    </ion-menu>
-
   </ion-split-pane>
 </ion-split-pane>
