--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,6 @@
-<koios-layout type="menu">
-  <div menu-items>
-    <koios-menu-item link="['/dashboard']" title="Dashboard" icon="analytics"></koios-menu-item>
-    <koios-menu-item link="['/protected']" title="Protected"></koios-menu-item>
-  </div>
-  <router-outlet></router-outlet>
-</koios-layout>
+<ion-content>
+  <!--parallax-header-->
+  <koios-layout type="menu">
+    <router-outlet></router-outlet>
+  </koios-layout>
+</ion-content>
