--- a/src/app/shared/components/menu-item/menu-item.component.html
+++ b/src/app/shared/components/menu-item/menu-item.component.html
@@ -3,5 +3,5 @@
     <ion-icon name="{{icon}}"></ion-icon>
   </div>
   <label *ngIf="!!title">{{title}}</label>
-  <ng-content></ng-content>
+  <!--<ng-content></ng-content>-->
 </a>
