--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -6,30 +6,14 @@
     <img src="assets/icon.png" height="35" width="35" />
     <ion-title>KoiosAnalytics</ion-title>
   </span>
-
-  <!--<ion-segment class="segment segment-ios ng-untouched ng-valid ng-dirty">-->
-    <!--<ion-segment-button class="segment-button" role="button" tappable="" value="paid" aria-pressed="false" style="transition: none;">-->
-      <!--Paid-->
-      <!--<div class="button-effect"></div>-->
-    <!--</ion-segment-button>-->
-    <!--<ion-segment-button class="segment-button" role="button" tappable="" value="free" aria-pressed="false">-->
-      <!--Free-->
-      <!--<div class="button-effect"></div>-->
-    <!--</ion-segment-button>-->
-    <!--<ion-segment-button class="segment-button segment-activated" role="button" tappable="" value="top" aria-pressed="true">-->
-      <!--Top-->
-      <!--<div class="button-effect"></div>-->
-    <!--</ion-segment-button>-->
-  <!--</ion-segment>-->
-
   <button mobile-hidden ion-button>
       <ion-icon name="search"></ion-icon>
       Search
   </button>
-  <!--<koios-menu-item link="['/about']" title="About" icon="analytics"></koios-menu-item>-->
-  <!--<koios-menu-item link="['/dashboard']" title="Dashboard" icon="analytics"></koios-menu-item>-->
-
-  <ng-content></ng-content>
+  <koios-menu-item link="['/about']" title="About" icon="analytics"></koios-menu-item>
+  <koios-menu-item link="['/dashboard']" title="Dashboard" icon="analytics"></koios-menu-item>
+  <koios-menu-item link="['/protected']" title="Protected" icon="analytics"></koios-menu-item>
+  <!--<ng-content></ng-content>-->
   <ion-buttons end>
     <koios-userinfo summary="true" [hidden]="canShowUserComponentInHeader"></koios-userinfo>
     <button invisible-to="mobile" [hidden]="canShowUserComponentInHeader" ion-button (click)="presentPopover($event)">
@@ -38,3 +22,4 @@
     </button>
   </ion-buttons>
 </ion-navbar>
+<breadcrumbs></breadcrumbs>
