--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,10 @@
-<ion-content>
+<ion-content parallax-header>
   <!--parallax-header-->
-  <koios-layout type="menu">
-    <router-outlet></router-outlet>
-  </koios-layout>
+  <div class="header-image"></div>
+  <div class="main-content">
+    <koios-layout type="menu">
+      <router-outlet></router-outlet>
+    </koios-layout>
+  </div>
 </ion-content>
+
